<resources>
    <string name="app_name">E_CommereceApplication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_id">Email ID</string>
    <string name="enter_email">Enter Email</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="i_don_t_have_an_account">Don\'t have an account? Signup</string>
    <string name="full_name">Full Name</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="register">Register</string>
    <string name="i_have_an_account">Have an account</string>
    <string name="super_cart">SUPER CART</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="orders">Orders</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="Suchetha">Suchetha</string>
    <string name="suchetha_gmail_com">suchetha@gmail.com</string>
    <string name="_9892590355">+1 9892590355</string>
    <string name="phone">Phone</string>
    <string name="phones">Phones</string>
    <string name="description">Description</string>
    <string name="comment">Comment</string>
    <string name="model_name">Model Name</string>
    <string name="real_me">RealMe</string>
    <string name="UserReviews">User Reviews</string>
    <string name="specifications">Specifications</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="price">Price</string>
    <string name="_change_theme">Change Theme</string>
    <string name="switch_theme">Switch Theme</string>
    <string name="home_addy">HOME</string>
    <string name="dummy_addy">408 Ridge Road, #12 GreenBelt,Maryland,20770,US</string>
    <string name="realme_nazro_50">RealMe Nazro 50</string>
    <string name="_640">$ 640</string>
    <string name="dummy_text_description">OS: Android 10, RAM: 16 GB, Internal Storage: 256 GB, Primary Camera: 64 MP, Secondary Camera: 13 MP</string>
    <string name="_200">$ 200</string>
    <string name="add_plus">+</string>
    <string name="cart_minus">-</string>
    <string name="women_s_wear">Women\'s Wear</string>
    <string name="unit_price">Unit Price</string>
    <string name="quantity">Quantity</string>
    <string name="_1">1</string>
    <string name="amount">Amount</string>
    <string name="android">Android</string>
    <string name="total_bill_amount">Total Bill Amount</string>
    <string name="checkout">CHECKOUT</string>
    <string name="add_address">Add Address</string>
    <string name="next">NEXT</string>
    <string name="login_toolbar">LOGIN</string>
    <string name="email">Email</string>
    <string name="number">Number</string>
    <string name="cart_items">Cart Items</string>
    <string name="payment_option">Payment Option :</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="confirm_and_place_order">CONFIRM AND PLACE ORDER</string>
    <string name="_cancel_order">CANCEL ORDER</string>
</resources>