<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_24dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/productD_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            style="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/orange"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <RatingBar
            android:id="@+id/rating_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:numStars="5"
            android:rating="4"
            style="@style/Widget.AppCompat.RatingBar.Small"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/productD_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/productD_name"
            android:text="@string/description"
            android:layout_marginTop="@dimen/_8dp"
            style="@style/TextAppearance.AppCompat.Medium"
            />
        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPagerImage"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/productD_description"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/productD_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/price"
            android:layout_marginTop="@dimen/_8dp"
            style="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/orange"
            app:layout_constraintTop_toBottomOf="@id/viewPagerImage"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/addToCart"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_to_cart"
            android:textColor="@color/blue"
            android:layout_marginTop="@dimen/_8dp"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/productD_price"
            app:layout_constraintTop_toBottomOf="@id/viewPagerImage" />
        <com.apolisb42.shoppingcart.view.QuantityStepper
            android:id="@+id/quantity_stepper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8dp"
            android:background="@drawable/quantity_stepper_bg"
            android:visibility="gone"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/_16dp"
            app:layout_constraintStart_toEndOf="@+id/productD_price"
            app:layout_constraintTop_toBottomOf="@id/viewPagerImage"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_specification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/specifications"
            android:layout_marginTop="@dimen/_8dp"
            style="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintTop_toBottomOf="@id/productD_price"/>

        <LinearLayout
            android:id="@+id/specification_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/_8dp"
            app:layout_constraintTop_toBottomOf="@id/text_specification">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_specifications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="true"
                android:overScrollMode="never" />
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_reviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/UserReviews"
            android:layout_marginTop="@dimen/_8dp"
            style="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintTop_toBottomOf="@id/specification_layout"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_reviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/_8dp"
            app:layout_constraintTop_toBottomOf="@id/text_reviews"/>



    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>