<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_selectAddy"
        style="@style/NavigationViewTextAppearance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Select Delivery Address"
        app:layout_constraintStart_toEndOf="@id/vertical_left"
        app:layout_constraintTop_toBottomOf="@id/horizontal_up" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txt_selectAddy"
        android:padding="16dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="300dp"
            android:padding="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_title"
                style="@style/NavigationViewTextAppearance"
                android:textColor="@color/background_cardview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_addy"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_address"
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                android:text="@string/dummy_addy"
                android:textSize="@dimen/_17sp"
                app:layout_constraintEnd_toStartOf="@id/selected_address"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_title"/>

            <RadioButton
                android:id="@+id/selected_address"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add_address"
        style="@style/PrimaryButton"
        app:layout_constraintBottom_toTopOf="@id/horizontal_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_address"
        app:layout_constraintEnd_toStartOf="@id/btn_next"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_next"
        style="@style/PrimaryButton"
        app:layout_constraintBottom_toTopOf="@id/horizontal_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintStart_toEndOf="@id/btn_add_address"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.08" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

</androidx.constraintlayout.widget.ConstraintLayout>